--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,12 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
     useJUnitPlatform()
 }
 
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
     maxWarnings = 0
     toolVersion = '8.29'
@@ -348,6 +354,8 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-inline', version: '3.1.0'
 
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
+
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
     testImplementation group: "com.gilecode.yagson", name:"j9-reflection-utils", version:"1.0"
