--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id 'pmd'
     id 'jacoco'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'org.springframework.boot' version '2.4.9'
+    id 'org.springframework.boot' version '2.5.3'
     id 'org.owasp.dependencycheck' version '6.0.3'
     id 'com.github.ben-manes.versions' version '0.36.0'
     id "info.solidsoft.pitest" version '1.6.0'
@@ -232,6 +232,9 @@ dependencyManagement {
         // CVE-2021-29425
         dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
     }
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
+    }
 }
 
 repositories {
@@ -254,7 +257,7 @@ def versions = [
         pitest              : '1.6.3',
         sonarPitest         : '0.5',
         serviceAuthVersion  : '4.0.0',
-        springFramework     : '5.3.9'
+        springFramework     : '5.3.7'
 ]
 
 ext['spring-framework.version'] = '5.3.7'
@@ -323,9 +326,6 @@ dependencies {
 
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.5.5'
     compile group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3'
-
-    // https://mvnrepository.com/artifact/org.glassfish/jakarta.el
-    implementation group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
