--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
     id 'jacoco'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'org.springframework.boot' version '2.5.3'
-    id 'org.owasp.dependencycheck' version '6.0.3'
+    id 'org.owasp.dependencycheck' version '6.4.1.1'
     id 'com.github.ben-manes.versions' version '0.36.0'
     id "info.solidsoft.pitest" version '1.6.0'
     id 'org.sonarqube' version '3.1.1'
@@ -22,6 +22,7 @@ plugins {
 }
 
 apply plugin: "com.gorylenko.gradle-git-properties"
+apply plugin: "org.owasp.dependencycheck"
 
 group = 'uk.gov.hmcts.reform'
 version = '0.1.0'
@@ -202,7 +203,7 @@ dependencyCheck {
 dependencyManagement {
     dependencies {
         // CVE-2021-21290
-        dependencySet(group: 'io.netty', version: '4.1.61.Final') {
+        dependencySet(group: 'io.netty', version: '4.1.69.Final') {
             entry 'netty-buffer'
             entry 'netty-codec'
             entry 'netty-codec-dns'
@@ -220,7 +221,7 @@ dependencyManagement {
             entry 'netty-transport-native-kqueue'
             entry 'netty-transport-native-unix-common'
         }
-        dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.64'
+        dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
         // CVE-2018-10237 - Unbounded memory allocation
         // CVE-2020-8908 - Temp directory creation vulnerability
         dependencySet(group: 'com.google.guava', version: '30.1-jre') {
@@ -230,7 +231,7 @@ dependencyManagement {
             entry 'handlebars'
         }
         // CVE-2021-29425
-        dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
+        dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'
     }
     imports {
         mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
@@ -358,7 +359,7 @@ dependencies {
 
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
 
-    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
+    testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
     testImplementation group: "com.gilecode.yagson", name:"j9-reflection-utils", version:"1.0"
