--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id 'pmd'
     id 'jacoco'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'org.springframework.boot' version '2.5.3'
+    id 'org.springframework.boot' version '2.5.9'
     id 'org.owasp.dependencycheck' version '6.4.1.1'
     id 'com.github.ben-manes.versions' version '0.36.0'
     id "info.solidsoft.pitest" version '1.6.0'
@@ -204,7 +204,7 @@ dependencyCheck {
 dependencyManagement {
     dependencies {
         // CVE-2021-21290
-        dependencySet(group: 'io.netty', version: '4.1.69.Final') {
+        dependencySet(group: 'io.netty', version: '4.1.74.Final') {
             entry 'netty-buffer'
             entry 'netty-codec'
             entry 'netty-codec-dns'
@@ -221,6 +221,7 @@ dependencyManagement {
             entry 'netty-transport-native-epoll'
             entry 'netty-transport-native-kqueue'
             entry 'netty-transport-native-unix-common'
+            entry 'netty-tcnative-classes'
         }
         dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
         // CVE-2018-10237 - Unbounded memory allocation
@@ -262,7 +263,7 @@ def versions = [
         gradlePitest        : '1.6.0',
         pitest              : '1.6.3',
         sonarPitest         : '0.5',
-        springFramework     : '5.3.12'
+        springFramework     : '5.3.15'
 ]
 
 ext['spring-framework.version'] = '5.3.12'
@@ -271,13 +272,13 @@ configurations.all {
     resolutionStrategy {
         eachDependency { DependencyResolveDetails details ->
             if (details.requested.group in ['org.apache.logging.log4j']) {
-                details.useVersion '2.15.0'
+                details.useVersion '2.17.1'
             }
             if (details.requested.group in ['org.scala-lang']) {
                 details.useVersion '2.12.10'
             }
             if (details.requested.group in ['org.apache.tomcat.embed']) {
-                details.useVersion '9.0.54'
+                details.useVersion '10.0.16'
             }
             if (details.requested.group in ['org.apache.httpcomponents.httpclient']) {
                 details.useVersion '4.5.13'
@@ -339,14 +340,11 @@ dependencies {
 
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
 
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty', version: '2.4.4'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
-
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
     testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.1'
@@ -362,7 +360,6 @@ dependencies {
 
     testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
     testImplementation group: "com.gilecode.yagson", name:"j9-reflection-utils", version:"1.0"
     testImplementation group: "io.jsonwebtoken", name: "jjwt", version: "0.9.1"
 
