--- a/build.gradle
+++ b/build.gradle
@@ -236,6 +236,11 @@ dependencyManagement {
         }
         // CVE-2021-29425
         dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+        dependencySet(group: 'org.springframework.security', version: '5.6.1') {
+            entry 'spring-security-core'
+            entry 'spring-security-test'
+        }
     }
     imports {
         mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
