--- a/build.gradle
+++ b/build.gradle
@@ -342,6 +342,8 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.1.5'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.2'
 
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
 
