--- a/build.gradle
+++ b/build.gradle
@@ -267,7 +267,8 @@ def versions = [
         gradlePitest        : '1.6.0',
         pitest              : '1.6.3',
         sonarPitest         : '0.5',
-        springFramework     : '5.3.15'
+        springFramework     : '5.3.15',
+        fasterXmlJackson    : '2.13.2'
 ]
 
 ext['spring-framework.version'] = '5.3.12'
@@ -341,9 +342,11 @@ dependencies {
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.1.5'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.2'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.2'
+
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.fasterXmlJackson
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.fasterXmlJackson
+    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.fasterXmlJackson, ext: 'pom'
 
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
 
