PCQ-941-Fix-Pipeline-Issues

--- a/azure-pipelines-scheduled.yml
+++ b/azure-pipelines-scheduled.yml
@@ -46,7 +46,7 @@ stages:
       azureVault: $(vault)
       chartEnv: $(environment)
       mutationTest: True
-      functionalPostDeployTest: true
+      functionalTest: true
       integrationTest: true
       azureSecreKeys: 'jwt-secret'
       azureKeyMapping:
