--- a/build.gradle
+++ b/build.gradle
@@ -266,7 +266,7 @@ def versions = [
         pitest              : '1.6.3',
         sonarPitest         : '0.5',
         springFramework     : '5.3.20',
-        fasterXmlJackson    : '2.13.2',
+        fasterXmlJackson    : '2.14.0-rc1',
         springSecurity      : '5.7.1'
 ]
 
@@ -346,7 +346,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.1.5'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0-rc1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.fasterXmlJackson
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.fasterXmlJackson
     implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.fasterXmlJackson, ext: 'pom'
