--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 5
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
