--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ plugins {
     id 'checkstyle'
     id 'pmd'
     id 'jacoco'
-    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'org.springframework.boot' version '2.7.5'
-    id 'org.owasp.dependencycheck' version '7.1.0.1'
+    id 'org.owasp.dependencycheck' version '7.4.0'
     id 'com.github.ben-manes.versions' version '0.44.0'
     id "info.solidsoft.pitest" version '1.9.0'
     id 'org.sonarqube' version '3.5.0.2730'
@@ -224,7 +224,7 @@ dependencyManagement {
         dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
         // CVE-2018-10237 - Unbounded memory allocation
         // CVE-2020-8908 - Temp directory creation vulnerability
-        dependencySet(group: 'com.google.guava', version: '30.1-jre') {
+        dependencySet(group: 'com.google.guava', version: '31.1-jre') {
             entry 'guava'
         }
         dependencySet(group: 'com.github.jknack', version: '4.3.1') {
@@ -350,7 +350,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.fasterXmlJackson
     implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.fasterXmlJackson, ext: 'pom'
 
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.32'
+    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.8'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty'
@@ -374,7 +374,7 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.9.0'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
 
-    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
+    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.33.2'
 
     testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
