--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ checkstyle {
 }
 
 pmd {
+    ignoreFailures = true
     toolVersion = "6.28.0"
     sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
     reportsDir = file("$project.buildDir/reports/pmd")
