--- a/build.gradle
+++ b/build.gradle
@@ -266,11 +266,11 @@ def versions = [
         springBoot          : springBoot.class.package.implementationVersion,
         springfoxSwagger    : '3.0.0',
         restAssured         : '4.2.0',
-        lombok              : '1.18.12',
+        lombok              : '1.18.22',
         pitest              : '1.9.0',
         sonarPitest         : '0.5',
         springFramework     : '5.3.20',
-        fasterXmlJackson    : '2.14.0-rc1',
+        fasterXmlJackson    : '2.14.1',
         springSecurity      : '5.7.5'
 ]
 
