--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id 'pmd'
     id 'jacoco'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.springframework.boot' version '2.7.5'
+    id 'org.springframework.boot' version '3.0.5'
     id 'org.owasp.dependencycheck' version '8.2.1'
     id 'com.github.ben-manes.versions' version '0.46.0'
     id "info.solidsoft.pitest" version '1.9.0'
@@ -142,7 +142,7 @@ jacocoTestReport {
     reports {
         xml.enabled = true
         csv.enabled = false
-        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+        xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
     }
 }
 
@@ -226,15 +226,11 @@ dependencyManagement {
             entry 'netty-transport-classes-kqueue'
         }
         dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
-        // CVE-2018-10237 - Unbounded memory allocation
-        // CVE-2020-8908 - Temp directory creation vulnerability
-        dependencySet(group: 'com.google.guava', version: '31.1-jre') {
-            entry 'guava'
-        }
+
         dependencySet(group: 'com.github.jknack', version: '4.3.1') {
             entry 'handlebars'
         }
-        dependencySet(group: 'org.springframework.cloud', version: '3.1.5') {
+        dependencySet(group: 'org.springframework.cloud', version: '4.0.1') {
             entry 'spring-cloud-starter-openfeign'
             entry 'spring-cloud-openfeign-core'
         }
@@ -246,7 +242,7 @@ dependencyManagement {
         }
     }
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.2'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.2'
     }
 }
 
@@ -260,17 +256,18 @@ repositories {
 }
 
 def versions = [
-        junit               : '5.7.0',
+        junit               : '5.9.2',
         reformLogging       : '5.1.1',
         springBoot          : springBoot.class.package.implementationVersion,
         springfoxSwagger    : '3.0.0',
-        restAssured         : '4.2.0',
+        restAssured         : '5.2.1',
         lombok              : '1.18.22',
         pitest              : '1.9.0',
         sonarPitest         : '0.5',
         springFramework     : '5.3.26',
         fasterXmlJackson    : '2.14.2',
-        springSecurity      : '5.7.5'
+        springSecurity      : '5.7.5',
+        springBoot          : '3.0.5'
 ]
 
 ext['spring-framework.version'] = '5.3.12'
@@ -279,13 +276,10 @@ configurations.all {
     resolutionStrategy {
         eachDependency { DependencyResolveDetails details ->
             if (details.requested.group in ['org.apache.logging.log4j']) {
-                details.useVersion '2.17.2'
+                details.useVersion '2.20.0'
             }
             if (details.requested.group in ['org.scala-lang']) {
                 details.useVersion '2.12.10'
-            }
-            if (details.requested.group in ['org.apache.tomcat.embed']) {
-                details.useVersion '9.0.72'
             }
             if (details.requested.group in ['org.apache.httpcomponents.httpclient']) {
                 details.useVersion '4.5.13'
@@ -303,28 +297,18 @@ dependencies {
         exclude group: 'org.springframework.cloud', module: 'spring-cloud-context'
     }
 
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.0.5'
-
-    implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-context', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-core', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-expression', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-jcl', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
-    implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
-    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: versions.springBoot
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: versions.springBoot
+    
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '4.0.1'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
 
@@ -352,11 +336,6 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.1.5'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.1'
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.fasterXmlJackson
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.fasterXmlJackson
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.fasterXmlJackson
-    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.fasterXmlJackson, ext: 'pom'
-
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.8'
 
@@ -365,9 +344,6 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
-
-    //testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    //testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
     testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.0'
@@ -387,6 +363,9 @@ dependencies {
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
 
     testImplementation group: "io.jsonwebtoken", name: "jjwt", version: "0.9.1"
+
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
