--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@ plugins {
     id 'org.sonarqube' version '4.0.0.2929'
     id 'com.gorylenko.gradle-git-properties' version '2.4.1'
     id "io.freefair.lombok" version "8.0.1"
-    id "java"
 }
 
 apply plugin: "com.gorylenko.gradle-git-properties"
@@ -235,7 +234,7 @@ dependencyManagement {
         dependencySet(group: 'com.github.jknack', version: '4.3.1') {
             entry 'handlebars'
         }
-        dependencySet(group: 'org.springframework.cloud', version: '3.1.5') {
+        dependencySet(group: 'org.springframework.cloud', version: '4.0.2') {
             entry 'spring-cloud-starter-openfeign'
             entry 'spring-cloud-openfeign-core'
         }
@@ -321,7 +320,7 @@ dependencies {
     implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
-    //testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
+    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
